# gumpa

./: .gitignore  Cargo.toml  README.md
demo/: demo_compute.py  demo_triangle.py
gui/: Cargo.toml
gui-app/: Cargo.toml
gui-app/src/: main.rs
gui/src/: element.rs  gui.wgsl  lib.rs  math.rs  render.wgsl  runtime.rs
learning/: README.md
learning/batching/: Cargo.toml
learning/batching/src/: main.rs  shader.wgsl
learning/draws/: Cargo.toml
learning/draws/src/: lib.rs  main.rs
learning/get-started/: Cargo.toml
learning/get-started/src/: main.rs  shader.wgsl
learning/riemann-sum/: Cargo.toml
learning/riemann-sum-2d/: Cargo.toml
learning/riemann-sum-2d/src/: main.rs  shader.wgsl
learning/riemann-sum/src/: main.rs  shader.wgsl
learning/textures/: Cargo.toml
learning/textures/src/: lib.rs  main.rs
learning/triangle/: Cargo.toml
learning/triangle/src/: main.rs
learning/vec-add/: Cargo.toml
learning/vec-add/src/: main.rs
vs/: Cargo.toml  README.md
vs/src/: main.rs  reimann.wgsl  riemann.rs  utils.rs  vecadd.rs  vecadd.wgsl
