[package]
name = "riemann-sum-2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.14.1"
pollster = { version = "0.3.0", features = ["macro"] }
wgpu =  { version = "0.19.1", features = ["wgsl", "metal"] }
